--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
             src="images/yoga.png"
             class="img-fluid p-2 shadow rounded mb-4"
             alt="Yoga project"
+            title="Yoga project"
           />
         </div>
         <div class="col-sm-4">
@@ -93,6 +94,7 @@
             src="images/weather.png"
             class="img-fluid p-2 shadow rounded mb-4"
             alt="Weather project"
+            title="Weather project"
           />
         </div>
         <div class="col-sm-4">
@@ -100,13 +102,18 @@
             src="images/yogurt.png"
             class="img-fluid p-2 shadow rounded mb-4"
             alt="Yogurt project"
+            title="Yogurt project"
           />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5 mb-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:pielszym@googlemail.com" class="email-link">
+      <a
+        href="mailto:pielszym@googlemail.com"
+        class="email-link"
+        title="my email address"
+      >
         pielszym@googlemail.com</a
       >
     </div>
