--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             src="images/yoga.png"
             alt="yoga project"
             class="img-fluid rounded d-none d-sm-block"
+            title="yoga project"
           />
         </div>
         <div class="col-sm-6">
@@ -95,7 +96,12 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link project-link">Launch Yoga App</a>
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Yoga project link"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -109,7 +115,12 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link project-link">Launch Weather App</a>
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project link"
+              >Launch Weather App</a
+            >
           </div>
         </div>
 
@@ -118,6 +129,7 @@
             src="images/weather.png"
             alt="weather project"
             class="img-fluid rounded d-none d-sm-block"
+            title="weather project"
           />
         </div>
       </div>
@@ -127,6 +139,7 @@
             src="images/yogurt.png"
             alt="yogurt project"
             class="img-fluid rounded d-none d-sm-block"
+            title="yogurt project"
           />
         </div>
         <div class="col-md-6">
@@ -138,7 +151,12 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link project-link">Launch Yogurt App</a>
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Yogurt project link"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
