adjust SEO friendly and CSS

--- a/about.html
+++ b/about.html
@@ -51,7 +51,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html" title="About me"
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Patrycja Oosthuizen"
                 >About me</a
               >
             </li>
@@ -60,7 +63,7 @@
                 class="nav-link"
                 href="about.html#contact"
                 class="contact-link"
-                title="Contact me"
+                title="Contact Patrycja Oosthuizen"
                 >Contact me</a
               >
             </li>
@@ -112,7 +115,7 @@
       <a
         href="mailto:pielszym@googlemail.com"
         class="email-link"
-        title="my email address"
+        title="Patrycja Oosthuizen email address"
       >
         pielszym@googlemail.com</a
       >
