--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patrycja Oosthuizen is a front-end developer beased in UK, check out this project and contact her for job inquiries"
+      content="Patrycja Oosthuizen is a front-end developer beased in UK, check out her project and contact her for job inquiries"
     />
     <title>Front-end developer - Patrycja Oosthuizen</title>
     <link
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html " title="home page"
+        <a class="navbar-brand" href="index.html " title="Homepage"
           >Patrycja Oosthuizen</a
         >
         <button
@@ -46,12 +46,15 @@
                 class="nav-link active"
                 aria-current="page"
                 href="home.html"
-                title="home page"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="about me"
+              <a
+                class="nav-link"
+                href="about.html"
+                title="About Patrycja Oosthuizen"
                 >About me</a
               >
             </li>
@@ -60,7 +63,7 @@
                 class="nav-link"
                 href="about.html#contact"
                 class="contact-link"
-                title="contact me"
+                title="contact Patrycja Oosthuizen"
                 >Contact me</a
               >
             </li>
@@ -72,10 +75,18 @@
     <h1 class="text-center">Patrycja Oosthuizen</h1>
     <h3 class="text-center">🇵🇱 Front-end developer, based in UK</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link" title="Contact me"
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Patrycja Oosthuizen"
         >Contact me</a
       >
-      <a href="about.html" class="secondary-link" title="About me">About me</a>
+      <a
+        href="about.html"
+        class="secondary-link"
+        title="About Patrycja Oosthuizen"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
@@ -142,7 +153,7 @@
             title="yogurt project"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
